--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Lyft flexbox</title>
+	<script src="https://use.fontawesome.com/1625bb79ec.js"></script>
 	<link rel="stylesheet" href="assets/css/main.css">
 	<link rel="stylesheet" href="assets/css/common.css">
 </head>
 <body>
+	<nav id="bar" class="flex-container">
+		<img src="assets/img/logo-white.png" alt="logo">
+		<a href="#">Drive</a>
+		<a href="#">Explore <i class="fa fa-angle-down" aria-hidden="true"></i></a>
+		<a href="#">Help</a>
+		<a href="#" class="bordes">log in</a>	
+	</nav>
+	<footer>
+		<div class="flex-container">
+			
+		</div>
+		
+	</footer>
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
