--- a/index.html
+++ b/index.html
@@ -14,13 +14,36 @@
 		<a href="#">Explore <i class="fa fa-angle-down" aria-hidden="true"></i></a>
 		<a href="#">Help</a>
 		<a href="#" class="bordes">log in</a>	
+		<a href="#" class="hidde bordes">Sign in</a>
 	</nav>
-	<footer>
-		<div class="flex-container">
-			
+	<section class="video flex-container">
+		<video autoplay="autoplay" src="assets/img/hero-video.mp4"></video>
+	</section>
+	<section id="footer1" class="flex-container">
+		<div class="log flex-container">
+			<h4>LOG IN</h4>
+			<a href="#" class="enlace">Help</a>
+			<a href="#" class="enlace">Cities</a>
+			<a href="#" class="enlace">Airports</a>
+			<a href="#" class="enlace">Fare Estimate</a>				
+		</div>
+		<div class="partner flex-container">
+			<h4>Partner</h4>
+			<a href="#" class="enlace">Partnerships</a>
+			<a href="#" class="enlace">Enterprise</a>
+			<a href="#" class="enlace">Ambassadors</a>
+			<a href="#" class="enlace">Developers</a>
+		</div>
+		<div class="learn flex-container">
+			<h4>Learn</h4>
+			<a href="#" class="enlace">Safety</a>
+			<a href="#" class="enlace">Blog</a>
+			<a href="#" class="enlace">Press</a>
+			<a href="#" class="enlace">Careers</a>
 		</div>
 		
-	</footer>
+	</section>
+	 
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
