--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 				<p id="earn">Earn money for inviting friends to drive. Learn more.</p>
 			</div>
 	</header>
-	<section class="first-section">
-		<div class="contenedor izq">
+	<section class="first-section flex-container">
+		<div class="contenedor-izq">
 			<div class="cajita">
 				<h1>A RIDE IN MINUTES</h1>
 				<p>Request a ride and you'll be on your way in minutes</p>
@@ -45,8 +45,7 @@
 				<p>Trust & Safety Team, we got you.</p>
 			</div>
 			<div class="cajita">
-				<h1>HAPPY DRIVERS.</h1>
-				<h1>HAPPY RIDERS.</h1>
+				<h1>HAPPY DRIVERS. <br>HAPPY RIDERS.</h1>
 				<p>Ride with us and you'll see why 9 out of 10 rides end with five stars.</p>
 			</div>
 		</div>
