sección con videos

--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
 		</div>
 		<iframe width="960px" height="540px" src="https://www.youtube.com/embed/fLSmUWOYpKw" frameborder="0" allowfullscreen></iframe>
 	</section>
-	<section class="thrid flex-container">
+	<section class="second flex-container">
 		<iframe width="960px" height="540px" src="https://www.youtube.com/embed/v8nyGzOLsdw" frameborder="0" allowfullscreen></iframe>
-		<div class="txt-dos">
+		<div class="txt-uno">
 			<h4>WATCH</h4>
 			<h1>JUNE</h1>
 			<p>In an animated short film by Academy Award-winner John Kahrs, a lonely widow in historic South Chicago is empowered to start sharing the ride — and sharing her life, too.</p>
 		</div>
 	</section>
-	<section class="fourth">
+	<section class="second flex-container">
 		<div class="txt-uno">
 			<h4>WATCH</h4>
 			<h1>A GOOD THING GOING</h1>
