--- a/index.html
+++ b/index.html
@@ -75,47 +75,47 @@
 		</div>
 		<iframe width="960px" height="540px" src="https://www.youtube.com/embed/xj2VWLV0xCU" frameborder="0" allowfullscreen></iframe>
 	</section>
-	<footer class="primero">
+	<footer class="primero flex-container">
 		<div class="log">
 			<h1>LOG IN</h1>
-			<P class="link">Help</P>
-			<P class="link">Cities</P>
-			<P class="link">Airport</P>
-			<P class="link">Fare Estimate</P>
+			<p class="link">Help</p>
+			<p class="link">Cities</p>
+			<p class="link">Airport</p>
+			<p class="link">Fare Estimate</p>
 		</div>
-		<div class="partner">
+		<div class="log">
 			<h1>PARTNER</h1>
 			<p class="link">Partnership</p>
 			<p class="link">Enterprise</p>
 			<p class="link">Ambassadors</p>
 			<p class="link">Developers</p>
 		</div>
-		<div class="learn">
+		<div class="log">
 			<h1>LEARN</h1>
 			<p class="link">Safety</p>
 			<p class="link">Blog</p>
 			<p class="link">Press</p>
 			<p class="link">Careers</p>
 		</div>
-		<div class="img-media">
+		<div class="img-media flex-container">
 			<img src="assets/img/apple-store.svg">
 			<img src="assets/img/google-play.png">
 			<img src="assets/img/microsoft.png">
 		</div>
 	</footer>
-	<footer class="flex-container">
+	<footer class="media flex-container">
 		<div class="social-media">
 			<i class="icono fa fa-facebook" aria-hidden="true"></i>
 		</div>
 		<div class="social-media">
-			<i class="icono fa fa-google-plus" aria-hidden="true"></i>
+			<i class="fa fa-instagram" aria-hidden="true"></i>
 		</div>
 		<div class="social-media">
 			<i class="icono fa fa-twitter" aria-hidden="true"></i>
 		</div>
-		<div class="linea"></div>
+		<div class="underline"></div>
 	</footer>
-	<footer>
+	<footer class="final">
 	<p>© 2017 Lyft, Inc.TermsPrivacy</p>
 	</footer>
 	<script src="https://use.fontawesome.com/1625bb79ec.js"></script>
